Minor tweak in date.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Modern Data Science with R</title>
 
-<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -377,10 +377,10 @@ $(document).ready(function () {
 
 <div class="row">
 <div class="col-sm-7">
-<div id="nd-edition-plus-light-edits-and-updates-published-2024"
+<div id="nd-edition-with-light-edits-and-changes-updated-2026"
 class="section level3">
-<h3><a href="https://mdsr-book.github.io/mdsr3e">2nd edition (plus light
-edits and updates), published 2024</a></h3>
+<h3><a href="https://mdsr-book.github.io/mdsr3e">2nd edition (with light
+edits and changes), updated 2026</a></h3>
 </div>
 <div id="nd-edition-published-2021" class="section level3">
 <h3><a href="https://mdsr-book.github.io/mdsr2e">2nd edition, published
